--- a/package.json
+++ b/package.json
@@ -1,43 +1,43 @@
 {
-  "name": "kinomostr",
-  "version": "1.0.0",
-  "description": "",
-  "main": "init.js",
-  "scripts": {
-    "dev": "nodemon init.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "bcrypt": "^5.0.1",
-    "bcryptjs": "^2.4.3",
-    "body-parser": "^1.19.2",
-    "connect-flash": "^0.1.1",
-    "cookie": "^0.5.0",
-    "cookie-parser": "^1.4.6",
-    "cookie-session": "^2.0.0",
-    "cookies": "^0.8.0",
-    "crypto-js": "^4.1.1",
-    "dotenv": "^16.0.0",
-    "ejs": "^3.1.6",
-    "ejs-lint": "^1.2.1",
-    "express": "^4.17.3",
-    "express-session": "^1.17.2",
-    "gridfs-stream": "^1.1.1",
-    "hbs": "^4.2.0",
-    "jsonwebtoken": "^8.5.1",
-    "method-override": "^3.0.0",
-    "mongodb": "^4.4.1",
-    "mongoose": "^6.2.9",
-    "mongoose-findorcreate": "^3.0.0",
-    "multer": "^1.4.4",
-    "multer-gridfs-storage": "^5.0.2",
-    "nodemon": "^2.0.15",
-    "passport": "^0.5.2",
-    "passport-google-oauth": "^2.0.0",
-    "passport-google-oauth1": "^1.0.0",
-    "passport-google-oauth20": "^2.0.0",
-    "passport-local": "^1.0.0"
-  }
+    "name": "kinomostr",
+    "version": "1.0.0",
+    "description": "",
+    "main": "init.js",
+    "scripts": {
+        "dev": "nodemon app.js",
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "bcrypt": "^5.0.1",
+        "bcryptjs": "^2.4.3",
+        "body-parser": "^1.19.2",
+        "connect-flash": "^0.1.1",
+        "cookie": "^0.5.0",
+        "cookie-parser": "^1.4.6",
+        "cookie-session": "^2.0.0",
+        "cookies": "^0.8.0",
+        "crypto-js": "^4.1.1",
+        "dotenv": "^16.0.0",
+        "ejs": "^3.1.6",
+        "ejs-lint": "^1.2.1",
+        "express": "^4.17.3",
+        "express-session": "^1.17.2",
+        "gridfs-stream": "^1.1.1",
+        "hbs": "^4.2.0",
+        "jsonwebtoken": "^8.5.1",
+        "method-override": "^3.0.0",
+        "mongodb": "^4.4.1",
+        "mongoose": "^6.2.9",
+        "mongoose-findorcreate": "^3.0.0",
+        "multer": "^1.4.4",
+        "multer-gridfs-storage": "^5.0.2",
+        "nodemon": "^2.0.15",
+        "passport": "^0.5.2",
+        "passport-google-oauth": "^2.0.0",
+        "passport-google-oauth1": "^1.0.0",
+        "passport-google-oauth20": "^2.0.0",
+        "passport-local": "^1.0.0"
+    }
 }
