--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "bcryptjs": "^2.4.3",
         "body-parser": "^1.19.2",
         "connect-flash": "^0.1.1",
+        "connect-mongodb-session": "^3.1.1",
         "cookie": "^0.5.0",
         "cookie-parser": "^1.4.6",
         "cookie-session": "^2.0.0",
@@ -31,6 +32,7 @@
         "mongodb": "^4.4.1",
         "mongoose": "^6.2.9",
         "mongoose-findorcreate": "^3.0.0",
+        "mongoose-paginate-v2": "^1.6.3",
         "multer": "^1.4.4",
         "multer-gridfs-storage": "^5.0.2",
         "nodemon": "^2.0.15",
