--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "cookie-parser": "^1.4.6",
         "cookie-session": "^2.0.0",
         "cookies": "^0.8.0",
+        "cors": "^2.8.5",
         "crypto-js": "^4.1.1",
         "dotenv": "^16.0.0",
         "ejs": "^3.1.6",
@@ -27,6 +28,7 @@
         "express-session": "^1.17.2",
         "gridfs-stream": "^1.1.1",
         "hbs": "^4.2.0",
+        "image-to-base64": "^2.2.0",
         "jsonwebtoken": "^8.5.1",
         "method-override": "^3.0.0",
         "mongodb": "^4.4.1",
